# quackformers

./: Cargo.toml  LICENCE  Makefile  README.md  build.rs  set_duckdb_version.sh  test_query.sql
.cargo/: config.toml
.github/workflows/: MainDistributionPipeline.yml
builds/: README.md
examples/rag/: chunks.csv  vss_rag.sql
examples/server/: README.md  server.py
src/: bedrock_utils.rs  embed_utils.rs  lib.rs
src/embed_utils/jina_implementation/: mod.rs
src/jina_implementation/: mod.rs
test/sql/: quackformers.test  quackformers_test.test
