[package]
name = "quackformers"
version = "0.1.1"
edition = "2021"

[package.metadata]
maintainers = ["Martin Contreras <martincontrerasur@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[[example]]
name = "quackformers"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
accelerate-src = {version = "0.3.2", optional = true}
intel-mkl-src = {version = "0.8.1", optional = true}

# Base dependencies without specific backend
candle-core = { version = "0.8.4" }
candle-nn = { version = "0.8.4" }
candle-transformers = { version = "0.8.4" }

duckdb = { version = "1.2.2", features = [
    "vscalar",
    "vscalar-arrow",
    "vtab-arrow"
] }
duckdb-loadable-macros = "0.1.5"
hf-hub = { version = "0.4.2", default-features = false, features = ["rustls-tls", "ureq"] }
libduckdb-sys = { version = "1.2.2", features = ["loadable-extension"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokenizers = "0.13.2"

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

[features]
# Backend selection features
accelerate = [
    "dep:accelerate-src",
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate"
]
mkl = [
    "dep:intel-mkl-src",
    "candle-core/mkl",
    "candle-nn/mkl",
    "candle-transformers/mkl"
]

# Default is empty - will be selected by build.rs
default = []