[package]
name = "quackformers"
version = "0.1.2"
edition = "2021"
# …

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[[example]]
name = "quackformers"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb               = { version = "1.2.2", features = ["vscalar","vscalar-arrow","vtab-arrow"] }
duckdb-loadable-macros = "0.1.5"
libduckdb-sys        = { version = "1.2.2", features = ["loadable-extension"] }
hf-hub               = { version = "0.4.2", default-features = false, features = ["rustls-tls","ureq"] }
once_cell = "1.18"
serde                = "1.0.219"
serde_json           = "1.0.140"
thiserror            = "2.0.12"
tokenizers           = "0.13.2"

# macOS: use Accelerate + Metal
[target.'cfg(target_os = "macos")'.dependencies]
candle-core          = { version = "0.8.4", default-features = false, features = ["accelerate","metal"] }
candle-nn            = { version = "0.8.4", default-features = false, features = ["accelerate","metal"] }
candle-transformers  = { version = "0.8.4", default-features = false, features = ["accelerate","metal"] }
accelerate-src       = "0.3.2"


# Linux/Windows: use Intel MKL
[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core          = { version = "0.8.4", default-features = false, features = ["mkl"] }
candle-nn            = { version = "0.8.4", default-features = false, features = ["mkl"] }
candle-transformers  = { version = "0.8.4", default-features = false, features = ["mkl"] }
# Bring in the raw MKL binaries
intel-mkl-src       = { version = "0.8.1", default-features = false, features = [
    # ⇨ static‐link MKL, LP64 interface, Intel OpenMP threading
    "mkl-static-lp64-iomp"
]}

# Pull in the FFI symbols for cblas_* and the Netlib name-mangled entry points
blas-sys            = { version = "0.7", default-features = false, features = ["intel-mkl"] }

# OpenSSL for non-Windows
[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl              = { version = "0.10", features = ["vendored"] }
openssl-sys          = { version = "0.9",  features = ["vendored"] }
