[package]
name = "quackformers"
version = "0.1.3"
edition = "2021"
# …

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[[example]]
name = "quackformers"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb               = { version = "1.2.2", features = ["vscalar","vscalar-arrow","vtab-arrow"] }
duckdb-loadable-macros = "0.1.5"
libduckdb-sys        = { version = "1.2.2", features = ["loadable-extension"] }
hf-hub               = { version = "0.4.2", default-features = false, features = ["rustls-tls","ureq"] }
once_cell = "1.18"
serde                = "1.0.219"
serde_json           = "1.0.140"
thiserror            = "2.0.12"
tokenizers           = "0.13.2"

# macOS: use Accelerate + Metal
[target.'cfg(target_os = "macos")'.dependencies]
candle-core          = { version = "0.8.4", default-features = false, features = ["accelerate","metal"] }
candle-nn            = { version = "0.8.4", default-features = false, features = ["accelerate","metal"] }
candle-transformers  = { version = "0.8.4", default-features = false, features = ["accelerate","metal"] }
accelerate-src       = "0.3.2"


# Linux/Windows: use Intel MKL
[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.8.4", default-features = false }
candle-nn = { version = "0.8.4", default-features = false }
candle-transformers = { version = "0.8.4", default-features = false }

# OpenSSL for non-Windows
[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl              = { version = "0.10", features = ["vendored"] }
openssl-sys          = { version = "0.9",  features = ["vendored"] }
